# template-service

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  makefile  pyproject.toml
deploy/: Dockerfile  docker-compose.yaml  example.config.toml
src/: config.py
src/application/: errors.py
src/application/enums/: base.py  order.py  role.py
src/application/schema/: auth.py  user.py
src/application/services/: auth.py
src/infra/: loguru.py  metrics.py
src/infra/postgres/: schemas.py  tables.py
src/infra/postgres/gateways/: base.py
src/infra/postgres/migrations/: env.py  script.py.mako
src/main/: __init__.py  di.py  security.py  web.py
src/presentation/fastapi/: exception_handlers.py  setup.py
src/presentation/fastapi/routes/: schema.py
src/presentation/fastapi/routes/auth/: api.py
src/presentation/fastapi/routes/views/: api.py
src/presentation/fastapi/routes/views/templates/: index.html
tests/: conftest.py
tests/utils/: alembic.py
